Refactor and streamline test setup and code structure
- Extract task initialization logic into a separate `getTasks` method in `GroupByTasks` for better reuse and readability
- Inline single-line lambdas in tests for cleaner code
- Remove unused imports across multiple test classes
- Replace deprecated `.collect(Collectors.toList())` with `.toList()` for modern stream practices
- Simplify assertions and improve code consistency in test cases
- Address minor cleanup in test annotations and comments